src/tests/functionality/assignment_5_functions_headers/valid/08_mandatory_pass_by_value_does_not_modify_argument.c
int change_copy(int x) {
    x = 99;
    return x;
}

int main() {
    int x = 6;
    int y = change_copy(x);
    return x;
}
