src/tests/functionality/assignment_5_functions_headers/invalid_semantic/10_mandatory_call_wrong_argument_type_basic.c
int use_int(int x) {
    return x;
}

int main() {
    float y = 2.5;
    return use_int(y);
}
